overlays/default/patches/route-host.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: home-assistant
spec:
  host: ha.leblanc.rodeo
